--- a/a-react-weather/package.json
+++ b/a-react-weather/package.json
@@ -9,7 +9,10 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "moment": "^2.29.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,14 +21,6 @@
     "eject": "react-scripts eject"
   },
 
-  
-    "dependencies": {
-      "moment": "^2.29.3",
-      "semantic-ui-css": "^2.4.1",
-      "semantic-ui-react": "^2.1.3"
-    },
-  
-  
 
   "eslintConfig": {
     "extends": [
