"homepage": "https://EvMad.github.io/a-react-weat

--- a/a-react-weather/package.json
+++ b/a-react-weather/package.json
@@ -1,6 +1,7 @@
 {
   "name": "a-react-weather",
   "version": "0.1.0",
+  "homepage": "https://EvMad.github.io/a-react-weather/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
